@@ -144,42 +144,43 @@ echo '<div align=left style="width: 98%" class="pandora_form">';
 
 echo "<table border=0 cellpadding=4 cellspacing=4 class=databox width=98%>";
 	echo "<tr>";
-		echo "<td align=center>";
+		echo "<td align='left'>";
 		html_print_label (__("Name"),'name');
 		echo "</td>";
-		echo "<td align=center>"; 
+		echo "<td align='left'>"; 
 		html_print_input_text ('name_tag', $name_tag); 
 		echo "</td>";
 	echo "</tr>";
 	echo "<tr>";
-		echo "<td align=left>";
+		echo "<td align='left'>";
 		html_print_label (__("Description"),'name');
 		echo "</td>";
-		echo "<td align=center>";
+		echo "<td align='left'>";
 		html_print_input_text ('description_tag', $description_tag);
 		echo "</td>";
 	echo "</tr>";
 	echo "<tr>";
-		echo "<td align=left>";
+		echo "<td align='left'>";
 		echo '<b>' . __("Url") . '</b>'; 
 		echo ui_print_help_tip (__("Hyperlink to help information that has to exist previously."), true);
 		echo "</td>";
-		echo "<td align=center>";
+		echo "<td align='left'>";
 		html_print_input_text ('url_tag', $url_tag);
 		echo "</td>";
 	echo "</tr>";
 	echo "<tr>";
-		echo "<td align=left>";
+		echo "<td align='left'>";
 		echo '<b>' . __("Email") . '</b>'; 
 		echo ui_print_help_tip (__("Associated Email direction to use later in alerts associated to Tags."), true);
 		echo "</td>";
-		echo "<td align=center>";
-		html_print_input_text ('email_tag', $email_tag);
+		echo "<td align='left'>";
+		html_print_textarea('email_tag', 5, 20, $email_tag);
+		//html_print_input_text ('email_tag', $email_tag);
 		echo "</td>";
 	echo "</tr>";
 	echo "<tr>";
 		if ($action == "update"){
-			echo "<td align=center>";
+			echo "<td align='center'>";
 			html_print_input_hidden ('update_tag', 1);
 			echo "</td>";
 			echo "<td align=right>";
