@@ -1487,7 +1487,7 @@ CREATE TABLE IF NOT EXISTS `ttag` (
 	`name` varchar(100) NOT NULL default '', 
 	`description` text NOT NULL, 
 	`url` mediumtext NOT NULL, 
-	`email` text NULL,	
+	`email` text NULL,
 	PRIMARY KEY  (`id_tag`)
 ) ENGINE=InnoDB DEFAULT CHARSET=utf8; 
 
